Fixed answer sizing on mobile

--- a/style.css
+++ b/style.css
@@ -524,4 +524,11 @@ button#secret:hover{
         font-size: 16px;
     }
 
+    .answer-title{
+        font-size: 35px;
+    }
+    .answer-description{
+        font-size: 22px;
+    }
+
 }
